--- a/SpiderChase/SpiderChase.vcxproj.filters
+++ b/SpiderChase/SpiderChase.vcxproj.filters
@@ -62,5 +62,11 @@
     <None Include="Scenes\Start\start.vert">
       <Filter>Scenes\Start</Filter>
     </None>
+    <None Include="Scenes\Start\pak.list">
+      <Filter>Scenes\Start</Filter>
+    </None>
+    <None Include="Scenes\Start\start.program">
+      <Filter>Scenes\Start</Filter>
+    </None>
   </ItemGroup>
 </Project>
