--- a/SpiderChase/SpiderChase.vcxproj.filters
+++ b/SpiderChase/SpiderChase.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClCompile Include="Base\gamemesh.cpp">
       <Filter>Base</Filter>
     </ClCompile>
+    <ClCompile Include="Script\firstpersoncamera.cpp">
+      <Filter>Script</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Base">
@@ -59,6 +62,9 @@
     </ClInclude>
     <ClInclude Include="Base\gamemesh.hpp">
       <Filter>Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Script\firstpersoncamera.hpp">
+      <Filter>Script</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
