--- a/SpiderChase/SpiderChase.vcxproj
+++ b/SpiderChase/SpiderChase.vcxproj
@@ -186,6 +186,7 @@
     </ClCompile>
     <ClCompile Include="Engine\firstpersoncamera.cpp" />
     <ClCompile Include="Engine\input.cpp" />
+    <ClCompile Include="Engine\material.cpp" />
     <ClCompile Include="Engine\mesh.cpp" />
     <ClCompile Include="Scenes\Start\StartScene.cpp" />
     <ClCompile Include="Script\game.cpp" />
@@ -198,6 +199,7 @@
     <ClInclude Include="Engine\firstpersoncamera.hpp" />
     <ClInclude Include="Engine\flagsenum.hpp" />
     <ClInclude Include="Engine\input.hpp" />
+    <ClInclude Include="Engine\material.hpp" />
     <ClInclude Include="Engine\mesh.hpp" />
     <ClInclude Include="Scenes\Start\StartScene.hpp" />
     <ClInclude Include="Script\game.hpp" />
