--- a/SpiderChase/SpiderChase.vcxproj.filters
+++ b/SpiderChase/SpiderChase.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="Engine\mesh.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\material.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Base">
@@ -76,6 +79,9 @@
       <Filter>Engine</Filter>
     </ClInclude>
     <ClInclude Include="Engine\flagsenum.hpp">
+      <Filter>Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\material.hpp">
       <Filter>Engine</Filter>
     </ClInclude>
   </ItemGroup>
