textures loaded, and collada scene removed from the assets

--- a/SpiderChase/SpiderChase.vcxproj.filters
+++ b/SpiderChase/SpiderChase.vcxproj.filters
@@ -38,11 +38,8 @@
     <ClCompile Include="Base\pakiosystem.cpp">
       <Filter>Base</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\bitmap.cpp">
+    <ClCompile Include="Engine\texture.cpp">
       <Filter>Engine</Filter>
-    </ClCompile>
-    <ClCompile Include="Base\imagereader.cpp">
-      <Filter>Base</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -102,11 +99,8 @@
     <ClInclude Include="Base\pakiosystem.hpp">
       <Filter>Base</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\bitmap.hpp">
+    <ClInclude Include="Engine\texture.hpp">
       <Filter>Engine</Filter>
-    </ClInclude>
-    <ClInclude Include="Base\imagereader.hpp">
-      <Filter>Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
