--- a/SpiderChase/SpiderChase.vcxproj
+++ b/SpiderChase/SpiderChase.vcxproj
@@ -177,7 +177,6 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
     <ClCompile Include="Base\EglContext.cpp" />
-    <ClCompile Include="Base\imagereader.cpp" />
     <ClCompile Include="Base\pak.cpp" />
     <ClCompile Include="Base\pakiostream.cpp" />
     <ClCompile Include="Base\pakiosystem.cpp" />
@@ -187,28 +186,27 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Engine\bitmap.cpp" />
     <ClCompile Include="Engine\firstpersoncamera.cpp" />
     <ClCompile Include="Engine\input.cpp" />
     <ClCompile Include="Engine\material.cpp" />
     <ClCompile Include="Engine\mesh.cpp" />
+    <ClCompile Include="Engine\texture.cpp" />
     <ClCompile Include="Scenes\Start\StartScene.cpp" />
     <ClCompile Include="Script\game.cpp" />
     <ClCompile Include="Script\scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\EglContext.h" />
-    <ClInclude Include="Base\imagereader.hpp" />
     <ClInclude Include="Base\pak.hpp" />
     <ClInclude Include="Base\pakiostream.hpp" />
     <ClInclude Include="Base\pakiosystem.hpp" />
     <ClInclude Include="Base\stdafx.h" />
-    <ClInclude Include="Engine\bitmap.hpp" />
     <ClInclude Include="Engine\firstpersoncamera.hpp" />
     <ClInclude Include="Engine\flagsenum.hpp" />
     <ClInclude Include="Engine\input.hpp" />
     <ClInclude Include="Engine\material.hpp" />
     <ClInclude Include="Engine\mesh.hpp" />
+    <ClInclude Include="Engine\texture.hpp" />
     <ClInclude Include="Scenes\Start\StartScene.hpp" />
     <ClInclude Include="Script\game.hpp" />
     <ClInclude Include="Script\scene.hpp" />
